Breadcrumb overflow and alignment fix

--- a/styles/components/breadcrumb.scss
+++ b/styles/components/breadcrumb.scss
@@ -1,10 +1,21 @@
 .gin-breadcrumb {
-  font-size: 0;
   color: var(--colorGinText);
   padding: 0;
 
   &-wrapper {
     min-inline-size: 1px; // Fixes ellipsis with flex overfloating issue.
+  }
+
+  &__list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: auto;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding-left: .25rem;
+    margin-top: 0;
+    margin-left: -.25rem;
   }
 
   &__item,
@@ -13,12 +24,18 @@
     font-weight: normal;
     color: var(--colorGinTextLight);
     text-decoration: none;
+    vertical-align: middle;
+  }
+
+  &__item {
+    font-size: 0;
   }
 
   &__item + &__item::before {
     content: "/";
     opacity: .3;
     font-size: var(--ginFontSizeSmall);
+    vertical-align: middle;
     display: inline-block;
     padding: 0 .5em;
     background: none;
@@ -52,17 +69,20 @@
     font-size: var(--ginFontSizeSmall);
     line-height: 2; // make sure we have enough room for focus ring
     border-radius: var(--ginBorderTiny);
-  }
 
-  &__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    inline-size: auto;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    padding-inline-start: .25rem;
-    margin-block-start: 0;
-    margin-inline-start: -.25rem;
+    &, em {
+      &, &:link, &:visited {
+        font-weight: normal;
+        color: var(--colorGinTextLight);
+      }
+
+      &:hover {
+        color: var(--colorGinPrimaryHover);
+      }
+    }
+
+    em {
+      font-style: italic;
+    }
   }
 }
